# quantum-shield-vpn

./: Cargo.toml  README.md
ios/: README.md
ios/QuantumShieldVPN/PacketTunnelProvider/: Info.plist  PacketTunnelProvider.entitlements  PacketTunnelProvider.swift
ios/QuantumShieldVPN/QuantumShieldVPN/: QuantumShieldVPNApp.swift
keys/: qs_client.pub  qs_server.pub
scripts/: setup_vps.sh
src/: lib.rs  tun_device.rs
src/crypto/: mod.rs
